--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
 		<dependency.version>3.1.2</dependency.version>
 		<assembly.version>3.2.0</assembly.version>
 		<surefire.version>3.0.0-M5</surefire.version>
+		<jacoco.version>0.8.7</jacoco.version>
 	</properties>
 
 	<build>
@@ -74,6 +75,27 @@
 						<phase>verify</phase>
 						<goals>
 							<goal>jar-no-fork</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>${jacoco.version}</version>
+				<executions>
+					<execution>
+						<id>jacoco-prepare</id>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>jacoco-report</id>
+						<phase>test</phase>
+						<goals>
+							<goal>report</goal>
 						</goals>
 					</execution>
 				</executions>
