--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,8 @@
 		<dependency.version>3.1.2</dependency.version>
 		<assembly.version>3.2.0</assembly.version>
 		<surefire.version>3.0.0-M5</surefire.version>
+		<jacoco.version>0.8.8</jacoco.version>
+		<sonar.version>3.9.1.2184</sonar.version>
 	</properties>
 
 	<build>
@@ -78,7 +80,33 @@
 					</execution>
 				</executions>
 			</plugin>
-			
+
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>${jacoco.version}</version>
+				<executions>
+					<execution>
+						<id>jacoco-prepare</id>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>jacoco-report</id>
+						<phase>test</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
+			<plugin>
+				<groupId>org.sonarsource.scanner.maven</groupId>
+				<artifactId>sonar-maven-plugin</artifactId>
+				<version>${sonar.version}</version>
+			</plugin>
 		</plugins>
 	</build>
 
