修改测试覆盖率分析

--- a/jdo-core/pom.xml
+++ b/jdo-core/pom.xml
@@ -94,9 +94,11 @@
 				<configuration>
 					<argLine>
 						--add-opens jdo.core/test.jutil.jdo.executor.parameter=ALL-UNNAMED
+						${argLine}
 					</argLine>
 				</configuration>
 			</plugin>
+
 		</plugins>
 	</build>
 
