--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,4 +24,10 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      run: mvn -B verify sonar:sonar -Dsonar.projectKey=blue0121_jdo -Dsonar.organization=blue0121 -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=$SONAR_TOKEN
+      run: > 
+        mvn -B verify sonar:sonar
+        -Dsonar.projectKey=blue0121_jdo
+        -Dsonar.organization=blue0121
+        -Dsonar.host.url=https://sonarcloud.io
+        -Dsonar.coverage.jacoco.xmlReportPaths=${project.build.directory}/site/jacoco/jacoco.xml
+        -Dsonar.login=$SONAR_TOKEN
