--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 	<version>0.1.0</version>
 	<modules>
 		<module>jdo-core</module>
+		<module>jdo-spring-boot-starter</module>
 	</modules>
 
 	<properties>
@@ -19,12 +20,13 @@
 		<!-- core -->
 		<jdo.version>0.1.0</jdo.version>
 		<slf4j.version>1.7.36</slf4j.version>
-		<druid.version>1.2.9</druid.version>
+		<hikaricp.version>5.0.1</hikaricp.version>
 		<log4j2.version>2.17.2</log4j2.version>
 		<lombok.version>1.18.24</lombok.version>
 
-		<!-- boot -->
-		<spring.boot.version>2.6.3</spring.boot.version>
+		<!-- spring -->
+		<spring.version>5.3.20</spring.version>
+		<spring.boot.version>2.6.7</spring.boot.version>
 
 		<!-- test -->
 		<h2.version>2.1.212</h2.version>
