--- a/jdo-core/pom.xml
+++ b/jdo-core/pom.xml
@@ -75,6 +75,13 @@
 			<version>${h2.version}</version>
 			<scope>test</scope>
 		</dependency>
+		
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>${commons-codec.version}</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
