--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
 		<junit.platform.version>1.8.2</junit.platform.version>
 		<junit.jupiter.version>5.8.2</junit.jupiter.version>
 		<mockito.version>4.6.1</mockito.version>
+		<commons-codec.version>1.15</commons-codec.version>
 		
 		<!-- maven plugins -->
 		<compiler.version>3.8.1</compiler.version>
